--- a/pep1devsecops/src/main/resources/application.properties
+++ b/pep1devsecops/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 8080
 spring.jpa.database = POSTGRESQL
 spring.datasource.url = jdbc:postgresql://localhost:5432/dbdevsecops
 spring.datasource.username = postgres
-spring.datasource.password = 12345678
+spring.datasource.password = admin
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.defer-datasource-initialization = true
 spring.sql.init.mode = always
