--- a/pep1devsecops/src/main/resources/application.properties
+++ b/pep1devsecops/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port = 8080
 spring.jpa.database = POSTGRESQL
 spring.datasource.url = jdbc:postgresql://localhost:5432/dbdevsecops
 spring.datasource.username = postgres
-spring.datasource.password = admin
+spring.datasource.password = postgres
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.defer-datasource-initialization = true
-spring.sql.init.mode = always
+spring.sql.init.mode = never
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
