--- a/pep1devsecops/docker-compose.yml
+++ b/pep1devsecops/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: 12345678
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: dbdevsecops
     ports:
       - "5432:5432"
@@ -20,7 +20,7 @@ services:
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/dbdevsecops
       - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=12345678
+      - SPRING_DATASOURCE_PASSWORD=postgres
     deploy:
       restart_policy:
         condition: on-failure
