--- a/pep1devsecops/src/main/resources/application.yml
+++ b/pep1devsecops/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/dbdevsecops
     username: postgres
-    password: 12345678
+    password: postgres
   jpa:
     database: POSTGRESQL
     show-sql: true
