--- a/front-devsecops/docker-compose.yml
+++ b/front-devsecops/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   front-devsecops:
     build: .
-    container_name: derflinger/front-devsecops
+    container_name: front-devsecops
     ports:
       - "3000:80"
     restart: always
