--- a/pep1devsecops/pom.xml
+++ b/pep1devsecops/pom.xml
@@ -30,11 +30,11 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-modulith.version>1.3.4</spring-modulith.version>
-		<sonar.exclusons>
+		<sonar.exclusions>
 			src\main\java\com\pep1devsecops\pep1devsecops\entities/*,
 			src\main\java\com\pep1devsecops\pep1devsecops\controllers/*,
 			src\main\java\com\pep1devsecops\pep1devsecops\repositories/*
-		</sonar.exclusons>
+		</sonar.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
