--- a/jenkinsFile
+++ b/jenkinsFile
@@ -12,21 +12,21 @@ pipeline {
         stage("Build JAR File") {
             steps {
                 dir("pep1devsecops") {
-                    sh "mvn clean install"
+                    bat "mvn clean install"
                 }
             }
         }
         stage("Test Backend") {
             steps {
                 dir("pep1devsecops") {
-                    sh "mvn test"
+                    bat "mvn test"
                 }
             }
         }
         stage("Build Docker Image backend") {
             steps {
                 dir("pep1devsecops") {
-                    sh "docker build -t niko085/pep1devsecops_backend ."
+                    bat "docker build -t derflinger/pep1devsecops_backend ."
                 }
             }
         }
@@ -34,61 +34,58 @@ pipeline {
             steps {
                 dir("pep1devsecops") {
                     withCredentials([string(credentialsId: 'dckrhubpassword', variable: 'dckpass')]) {
-                        sh "docker login -u niko085 -p ${dckpass}"
-                        sh "docker push niko085/pep1devsecops_backend"
+                        bat "docker login -u derflinger -p ${dckpass}"
+                        bat "docker push derflinger/pep1devsecops_backend"
                     }
                 }
             }
         }
-
         stage("Build Frontend"){
-            steps {
-                dir("front-devsecops") {
-                    sh "npm install"
-                    sh "npm run build"
+            steps{
+                dir("front-devsecops"){
+                    bat "npm install"
+                    bat "npm run build"
                 }
             }
         }
-
         stage("Build Docker Image frontend") {
             steps {
                 dir("front-devsecops") {
-                    sh "docker build -t niko085/front-devsecops ."
+                    bat "docker build -t derflinger/front-devsecops ."
                 }
             }
         }
-
         stage("Push Docker Image frontend") {
             steps {
                 dir("front-devsecops") {
                     withCredentials([string(credentialsId: 'dckrhubpassword', variable: 'dckpass')]) {
-                        sh "docker login -u niko085 -p ${dckpass}"
-                        sh "docker push niko085/front-devsecops"
+                        bat "docker login -u derflinger -p ${dckpass}"
+                        bat "docker push derflinger/front-devsecops"
                     }
                 }
             }
         }
-
         stage("Deploy Backend with Docker Compose") {
             steps {
                 dir("pep1devsecops") {
-                    sh "docker-compose down || exit 0"
-                    sh "docker-compose up -d --build"
+                    bat "docker-compose down || exit 0"
+                    bat "docker-compose up -d --build"
                 }
             }
         }
         stage("Deploy Frontend with Docker Compose") {
             steps {
                 dir("front-devsecops") {
-                    sh "docker-compose down || exit 0"
-                    sh "docker-compose up -d --build"
+                    bat "docker-compose down || exit 0"
+                    bat "docker-compose up -d --build"
                 }
             }
         }
     }
     post {
         always {
-            sh "docker logout"
+            bat "docker logout"
+
         }
     }
 }
