--- a/pep2/jenkinsFile
+++ b/pep2/jenkinsFile
@@ -40,7 +40,7 @@ pipeline {
         stage("Push Docker Image Backend") {
             steps {
                 dir("LAB-TBD") {
-                    bat "docker login -u niko085 -p Nicolas2519"
+                    bat "docker login -u niko085 -p Nico"
                     bat "docker push niko085/pep2devsecops_backend"
                 }
             }
@@ -66,7 +66,7 @@ pipeline {
         stage("Push Docker Image Frontend") {
             steps {
                 dir("Frontend") {
-                    bat "docker login -u niko085 -p Nicolas2519"
+                    bat "docker login -u niko085 -p Nico"
                     bat "docker push niko085/pep2devsecops_frontend"
                 }
             }
