--- a/pep2/jenkinsFile
+++ b/pep2/jenkinsFile
@@ -8,7 +8,7 @@ pipeline {
             steps {
                 checkout scmGit(
                     branches: [[name: '*/main']],
-                    userRemoteConfigs: [[url: 'https://github.com/siposisp/a']]
+                    userRemoteConfigs: [[url: 'https://github.com/siposisp/pep1devsecops']]
                 )
             }
         }
