--- a/LAB-TBD/pom.xml
+++ b/LAB-TBD/pom.xml
@@ -22,6 +22,12 @@
     <java.version>17</java.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <sonar.exclusions>
+      **/G1TBD/LABTBD/auth/entities/*,
+      **/G1TBD/LABTBD/controllers/*,
+      **/G1TBD/LABTBD/entities/*,
+      **/G1TBD/LABTBD/repositories/*
+    </sonar.exclusions>
   </properties>
 
   <dependencies>
