--- a/LAB-TBD/pom.xml
+++ b/LAB-TBD/pom.xml
@@ -115,17 +115,15 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.7.0</version>
+      <version>5.9.0</version> <!-- Updated JUnit Jupiter version -->
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.7.0</version>
+      <version>5.9.0</version> <!-- Updated JUnit Jupiter version -->
       <scope>test</scope>
     </dependency>
-
-
   </dependencies>
 
   <build>
@@ -142,13 +140,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
+        <version>3.0.0</version> <!-- Updated Surefire plugin version -->
         <configuration>
           <useModulePath>false</useModulePath>
         </configuration>
       </plugin>
     </plugins>
   </build>
-
 
 </project>
