refactor SpotBugs x Jenkins

--- a/LAB-TBD/pom.xml
+++ b/LAB-TBD/pom.xml
@@ -169,14 +169,13 @@
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
         <version>4.7.3.0</version>
-        <executions>
-          <execution>
-            <phase>verify</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
+        <configuration>
+          <effort>Max</effort>
+          <threshold>Low</threshold>
+          <xmlOutput>true</xmlOutput>
+          <outputDirectory>${project.build.directory}</outputDirectory>
+          <outputFile>spotbugsXml.xml</outputFile>
+        </configuration>
       </plugin>
     </plugins>
   </build>
