--- a/LAB-TBD/src/main/resources/application.properties
+++ b/LAB-TBD/src/main/resources/application.properties
@@ -4,5 +4,5 @@ server.port = 8090
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/LabTBD-2-2024
 spring.datasource.username = postgres
-spring.datasource.password = 12345678
+spring.datasource.password = postgres
 spring.datasource.driverClassName=org.postgresql.Driver
