--- a/LAB-TBD/docker-compose.yml
+++ b/LAB-TBD/docker-compose.yml
@@ -7,20 +7,20 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: 12345678
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: LabTBD-2-2024
     ports:
       - "5432:5432"
 
   app:
     container_name: pep2devsecops_backend
-    image: niko085/pep2devsecops_backend
+    image: derflinger/pep2devsecops_backend
     ports:
       - "8097:8097"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/LabTBD-2-2024
       - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=12345678
+      - SPRING_DATASOURCE_PASSWORD=postgres
     deploy:
       restart_policy:
         condition: on-failure
