--- a/LAB-TBD/src/main/resources/application.properties
+++ b/LAB-TBD/src/main/resources/application.properties
@@ -5,4 +5,5 @@ server.port = 8090
 spring.datasource.url = jdbc:postgresql://localhost:5432/LabTBD-2-2024
 spring.datasource.username = postgres
 spring.datasource.password = postgres
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.postgresql.Driver
