--- a/Pep3/LAB-TBD/prometheus.yml
+++ b/Pep3/LAB-TBD/prometheus.yml
@@ -14,6 +14,13 @@ scrape_configs:
   - job_name: 'spring-boot-app'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['localhost:8090']
+      - targets: ['app:8097']
     scrape_interval: 5s
-    scrape_timeout: 10s 
+
+  - job_name: 'postgres'
+    static_configs:
+      - targets: ['postgres-exporter:9187']
+
+  - job_name: 'node-exporter'
+    static_configs:
+      - targets: ['node-exporter:9100'] 
