--- a/Pep3/LAB-TBD/docker-compose.yml
+++ b/Pep3/LAB-TBD/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   postgres-db:
-    image: postgres
+    image: postgres:15
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -11,6 +11,11 @@ services:
       POSTGRES_DB: LabTBD-2-2024
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   app:
     container_name: pep2devsecops_backend
@@ -18,14 +23,20 @@ services:
     ports:
       - "8097:8097"
     environment:
+      - SPRING_PROFILES_ACTIVE=docker
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/LabTBD-2-2024
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
-    deploy:
-      restart_policy:
-        condition: on-failure
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8097/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
     depends_on:
-      - postgres-db
+      postgres-db:
+        condition: service_healthy
+    restart: unless-stopped
 
   prometheus:
     image: prom/prometheus:latest
